Fixed air gap checks